css/rcalendar/calendar.css
.nav-left {
    text-align: left;
}

.nav-right {
    text-align: right;
}

.scrollable {
    width: 100%;
    overflow-x: hidden;
    overflow-y: auto;
}

.calendar-container {
    height: 100%;
}

.text-muted {
    color: #999;
}

.table-fixed {
    table-layout: fixed;
}

.table {
    width: 100%;
    max-width: 100%;
    background-color: transparent;
}

.table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td,
.table > tbody > tr > td, .table > tfoot > tr > td {
    padding: 8px;
    line-height: 1.428571429;
    vertical-align: top;
    border-top: 1px solid #ddd;
}

.table > thead > tr > th {
    vertical-align: bottom;
    border-bottom: 2px solid #ddd;
}

.table > thead:first-child > tr:first-child > th, .table > thead:first-child > tr:first-child > td {
    border-top: 0
}

.table > tbody + tbody {
    border-top: 2px solid #ddd;
}

.table-bordered {
    border: 1px solid #ddd;
}

.table-bordered > thead > tr > th, .table-bordered > tbody > tr > th, .table-bordered > tfoot > tr > th,
.table-bordered > thead > tr > td, .table-bordered > tbody > tr > td, .table-bordered > tfoot > tr > td {
    border: 1px solid #ddd;
}

.table-bordered > thead > tr > th, .table-bordered > thead > tr > td {
    border-bottom-width: 2px;
}

.table-striped > tbody > tr:nth-child(odd) > td, .table-striped > tbody > tr:nth-child(odd) > th {
    background-color: #f9f9f9
}

.no-event-label {
    font-weight: bold;
    color: darkgrey;
    text-align: center;
}

.event-detail-container {
    border-top: 2px darkgrey solid;
    margin-top: 262px;
}

.event-detail {
    cursor: pointer;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.calendar-header {
    text-align: center;
    padding-top: 5px;
}

.calendar-hour-column, .calendar-week-column {
    width: 50px;
    white-space: nowrap;
}

.calendar-navbar {
    margin-bottom: 5px;
}

.calendar-event-wrap {
    position: relative;
    width: 100%;
    height: 100%;
}

.calendar-event {
    position: absolute;
    padding: 2px;
    cursor: pointer;
    z-index: 10000;
}

.calendar-event-inner {
    overflow: hidden;
    background-color: #3a87ad;
    color: white;
    height: 100%;
    width: 100%;
    padding: 2px;
    line-height: 15px;
}

.calendar-cell {
    padding: 0 !important;
    height: 37px;
}

.monthview-primary-with-event {
    background-color: #3a87ad;
    color: white;
}

.monthview-selected {
    background-color: #009900;
    color: white;
}

.monthview-current {
    background-color: lightgrey;
}

.monthview-eventdetail-timecolumn {
    width: 110px;
    overflow: hidden;
}

.monthview-datetable th {
    text-align: center;
}

.monthview-datetable td {
    cursor: pointer;
    text-align: center;
}

.monthview-secondary-with-event {
    background-color: #d9edf7;
}

.weekview-allday-label, .dayview-allday-label {
    float: left;
    height: 100%;
    line-height: 50px;
    text-align: center;
    width: 50px;
    border: 1px solid #ddd;
    border-right-width: 0;
}

.weekview-allday-content-wrapper, .dayview-allday-content-wrapper {
    margin-left: 50px;
    overflow: hidden;
    height: 100%;
}

.weekview-allday-content-table, .dayview-allday-content-table {
    height: 50px;
}

.monthview-slide {
    height: 306px;
}

.weekview-slide, .weekview, .dayview-slide, .dayview {
    height: 100%;
}

.weekview-header th {
    overflow: hidden;
    white-space: nowrap;
}

.weekview-allday-table, .dayview-allday-table {
    height: 50px;
}

.weekview-normal-event-container {
    margin-top: 87px;
}

.dayview-normal-event-container {
    margin-top: 47px;
}

@media (max-width: 750px) {
    .weekview-allday-label, .dayview-allday-label, .calendar-hour-column, .calendar-week-column {
        width: 30px;
        font-size: 14px;
    }

    .weekview-normal-event-container {
        margin-top: 82px;
    }

    .table > tbody > tr > td.calendar-hour-column {
        padding-left: 0;
        padding-right: 0;
        font-size: 12px;
    }

    .table > thead > tr > th.weekview-header {
        padding-left: 0;
        padding-right: 0;
        font-size: 12px;
    }

    .weekview-allday-label, .dayview-allday-label {
        line-height: inherit;
    }

    .weekview-allday-content-wrapper, .dayview-allday-content-wrapper {
        margin-left: 28px;
    }

    .calendar-event-inner {
        font-size: 12px;
    }
}

